German Diplomacy Reworked
- Focuses
- Locals

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -343,8 +343,24 @@
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
   PB_GER_Demands_Danish_desc:0 "Threatening the Danish"
+  PB_GER_Warning_Swiss:0 "Warning the Swiss"
+  PB_GER_Warning_Swiss_desc:0 "Warning the Swiss"
+  PB_GER_Look_Balkans:0 "Look to the Balkans"
+  PB_GER_Look_Balkans_desc:0 "Look to the Balkans"
+  PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
+  PB_GER_reinforcing_grip_over_europe_desc:0 "Reinforcing Our Grip over Europe"
+  PB_GER_taste_of_war:0 "A Taste of War"
+  PB_GER_taste_of_war_desc:0 "A Taste of War"
+  PB_GER_German_System:0 "A German Europe"
+  PB_GER_German_System_desc:0 "A German Europe"
+  PB_GER_Limits_War_Economy:0 "The Limits of War Economy"
+  PB_GER_Dutch_Influence:0 "Increasing our Control over the Dutch"
+  PB_GER_Dutch_Influence_desc:0 "Increasing our Control over the Dutch"  
+  PB_GER_Dalmatia_to_Italy:0 "Dalmatia to Italy?"
+  PB_GER_Dalmatia_to_Italy_desc:0 ""
 
-  
+  PB_GER_German_A_Visit_to_Naples:0 "The Kaiser in Naples"
+  PB_GER_German_Britian_Friendship_Treaty:0 "Reassuring our Friendship"
 
   ##########################
   # EVENTS
