--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -62,37 +62,61 @@
   ##########################
   # MINISTERS
   ##########################
+
   #DORIOT
-  FRA_PB_jean_mayol:0 "Jean de Mayol de Lupé"
+  FRA_PB_jean_mayol:0 "Jean de Mayol de Lupé\n\n§YBorn:§! §g21/01/1873\n\n§!§YJean de Mayol de Lupé§! §gserved in the 1st cavarly division during the Great War. Wounded in an artillery accident Mayol soon found himself out of a job, quickly joining a veterans assistance agency thereafter where he remained until the eventual armistice. By 1921 aid towards injured and retired veterans sank to all time lows forcing Mayol to seek employment wherever possible, eventually landing a job as a butcher just outside the Orleans city center\n\nDuring the unruly years of 1927 Mayol became increasingly radicalized by far right propaganda, eventually becoming one of the earliest members to join the Front Populaire Français. He rose through the ranks throughout the years, becoming somewhat of a nationalist figurehead alongside Doriot.\n§!"
+
   FRA_PB_robert_brasillach_FM:0 "Robert Brasillach"
-  FRA_PB_andre_grisoni_EM:0 "André Grisoni"
+
+  FRA_PB_andre_grisoni_EM:0 "André Grisoni\n\n§YBorn:§! §g20/05/1886\n\n§!§YAndré Grisoni§! §gworked as a banker in France's metropolitan region. By 1923 his bank, the CBC (Commission Bancaire Centrale) becamce France's third largest bank. Whilst initially anti-imperialist Grisoni started to worry about the governments stability, both in a political and economic sense. He is an opportunist more than an actual loyalist but Doriot doesn't see this as an issue. Reason being is Doriot's other options simply don't have the experience Mr. Grisoni has. \n§!"
+
   FRA_PB_pierre_pucheu_IM:0 "Pierre Pucheu"
+
   FRA_PB_robert_vigan:0 "Robert Le Vigan"
+
   #MUARRAS
   FRA_PB_raphael_alibert:0 "Raphaël Alibert"
+
   FRA_PB_leon_daudet_EM:0 "Léon Daudet" 
+
   FRA_PB_maurice_papon_FM:0 "Maurice Papon"
+
   FRA_PB_georges_valois_IM:0 "Georges Valois"
+
   FRA_PB_maurice_pujo:0 "Maurice Pujo"
+
   #ARMAND
   FRA_PB_hubert_lagardelle:0 "Hubert Lagardelle"
+
   FRA_PB_adrien_marquet_EM:0 "Adrien Marquet"
+
   FRA_PB_rene_bousquet_FM:0 "René Bousquet"
+
   FRA_PB_hubert_lagardelle_IM:0 "Hubert Lagardelle"
+
   FRA_PB_simone_beauvoir:0 "Simone de Beauvoir"
+
   #MILITARY 
   FRA_PB_edgar_puaud:0 "Edgar Puaud"
+
   FRA_PB_armand_pinsard_em:0 "Armand Pinsard"
+
   FRA_PB_jacques_correze_FM:0 "Jacques Corrèze"
+
   FRA_PB_francois_darlan_IM:0 "Francois Darlan"
+
   FRA_PB_paul_legentilhomme:0 "Paul Legentilhomme"
+
   #SP
   FRA_PB_paul_touvier:0 "Paul Touvier"
-  FRA_PB_emile_dewoitine_em:0 "Émile Dewoitine"
-  FRA_PB_celestin_laine_fm:0 "Célestin Lainé"
-  FRA_PB_jean_fontenoy_IM:0 "Jean Fontenoy"
-  FRA_PB_jean_paquis:0 "Jean Hérold-Paquis"
 
+  FRA_PB_emile_dewoitine_em:0 "Émile Dewoitine"
+
+  FRA_PB_celestin_laine_fm:0 "Célestin Lainé"
+
+  FRA_PB_jean_fontenoy_IM:0 "Jean Fontenoy"
+
+  FRA_PB_jean_paquis:0 "Jean Hérold-Paquis"
 
   ##########################
   # EVENTS
@@ -1251,10 +1275,13 @@
   PB_FRA_Mobolize_The_Militias:0 "Mobolize The Militias"
   PB_FRA_Child_Soliders:0 "Child Soliders"
   PB_FRA_Cutting_Corners:0 "Cutting Corners" 
+  PB_FRA_Cutting_Corners_desc:0 ""Let me have a look at this.\n Remove the bayonet log no soldier is forced to do a charge anymore. Also remove the cleaning rod, our soldiers life expectancy is already low enough that it is quite unlikely that they ever need to clean their rifle. Let's see... why do we actually go through such a long process to create lamented wood? Just use raw wood. And make this smaller, remove this, the soldiers do not need it anymore anyway. Forget about drilling a hole there honestly the rifle is good enough. Good enough to kill."" 
   PB_FRA_Do_Or_Die:0 "Do Or Die"
   PB_FRA_Green_Clouds_Over_France:0 "Drugs And Desperation"
+  PB_FRA_Green_Clouds_Over_France_desc:0 "I hate the Germans\n I hate the British\n I hate the Italians\n Victory shall come... France shall survive\n France must survive\n We just have to defeat them all\n Kill...KILL THEM ALL"
   PB_FRA_Foreign_Forces:0 "Foreign Forces"
   PB_FRA_Emergency_Fortifications:0 "Emergency Fortifications"
+  PB_FRA_Emergency_Fortifications_desc:0 "The Enemy needs to bleed, he needs to fight for every single piece of land we control.\n To make sure that our soldiers can accomplish this duty with high chances of success they need to fortify everywhere they desire. Dig trenches in those fields, build up sandbags at those street corners and do not forget to plant the hidden bombs underneath the floor. The weakling will fear more and more for their lives for every step they take."
   PB_FRA_Super_Weapon_Theories:0 "Super Weapon Theories" 
   PB_FRA_Mythical_Stories:0 "Mythical Stories"
   PB_FRA_Sons_Of_Charlemagne:0 "Sons Of Charlemagne"
