--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -416,9 +416,13 @@
   PBNews.107.d:0 ""
   PBNews.107.a:0 "Is he truly loyal to Russia?"
 
-  PBNews.107.t:0 "OTTOMANS BETRAY RUSSIA"
-  PBNews.107.d:0 ""
-  PBNews.107.a:0 "Will this be the edge they need?"
+  PBNews.108.t:0 "OTTOMANS BETRAY RUSSIA"
+  PBNews.108.d:0 ""
+  PBNews.108.a:0 "Will this be the edge they need?"
+
+  PBNews.109.t:0 "FALL OF BRITAIN"
+  PBNews.109.d:0 ""
+  PBNews.109.a:0 "Never Would I Have Thought"
 
 
 
