Starting work on Kirill

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -79,6 +79,10 @@
   PB_RUS_Airlift:0 "Resupplied By Air"
   PB_RUS_Anarchy:0 "Anarchy"
 
+  ## KIRILL IDEAS ##
+  PB_RUS_kirill_the_fallen_prince_and_wife:0 "The Fallen Prince and Wife"
+  PB_RUS_kirill_the_last_lovers:0 "The Last Lovers"
+
   ##########################
   # EVENTS
   ##########################
@@ -219,6 +223,19 @@
   RUS.40.a:0 ""
   RUS.40.b:0 ""
   RUS.40.c:0 ""
+  #KIRILL EVENTS  
+  RUS_kirill.1.t:0 "The Cousin on the Throne"
+  RUS_kirill.1.d:0 ""
+  RUS_kirill.1.a:0 "All for Mother Russia"
+  RUS_kirill.2.t:0 "Begone Vile Prince"
+  RUS_kirill.2.d:0 ""
+  RUS_kirill.2.a:0 "'To think it would come to this, Nikolai'"
+  RUS_kirill.3.t:0 "Begone Vile Maddness"
+  RUS_kirill.3.d:0 ""
+  RUS_kirill.3.a:0 "'Her dishonour has been purified, Nikolai'"
+  RUS_kirill.4.t:0 "The New Political Paradigm"
+  RUS_kirill.4.d:0 ""
+  RUS_kirill.4.a:0 "The work is only just beginning"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -467,9 +484,22 @@
   PB_RUS_the_noble_candidate_desc:0 ""
   PB_RUS_christ_has_our_backs:0 "Christ Protects Holy Russia"
   PB_RUS_christ_has_our_backs_desc:0 ""
+  #KIRILL FOCUSES
+  PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
+  PB_RUS_kirill_exiling_alexei:0 "Exiling Alexei"
+  PB_RUS_kirill_dealing_with_fanatical_lovers:0 "Dealing with the Fanatical Lovers"
+  PB_RUS_kirill_fighting_the_parties:0 "Fighting the Parties"
+  PB_RUS_kirill_focus_the_mob:0 "Focus on the §RMob§!"
+  PB_RUS_kirill_focus_the_hidden_enemy:0 "Focus on the §OHidden Enemy§!"
+  PB_RUS_kirill_focus_the_intelligentsia:0 "Focus on the §BIntelligentsia§!"
+  PB_RUS_kirill_finishing_them_off:0 "Finishing Them Off"
+  PB_RUS_kirill_russia_shall_righteous_once_more:0 "Russia Shall be Righteous Once More"
   ########################## 
   # Decisions
   ##########################
+
+  PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
+  PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nInfluence of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC]\nInfluence of §YThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC]\nInfluence of §YThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC]\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC]"
   
 
   ########################## 
@@ -501,6 +531,7 @@
   RUS_intro_1_tt:0 "Black Hundreds divisions shall be brought up in the Baltic."
   RUS_intro_2_tt:0 "Baltic Freikorps shall be brought up in the Baltic."
   RUS_intro_3_tt:0 "Native Polish divisions shall be brought up."
+  PB_RUS_kirill_shifting_politics:0 "The §YNew Russian Politics§! Decisions will be unlocked in order to deal with our new enemies\n\nThe Political landscape will §Rchange§! to better suit the new environment"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
@@ -517,5 +548,29 @@
   PB_RUS_The_Last_Line:0 "The Last Line"
   PB_RUS_False_Republic:0 "The False Republic"
   PB_RUS_Surrounded_On_All_Sides:0 "Surrounded On All Sides"
-  
+  #######################
+  # SCRIPTED LOC
+  #######################
+  PB_RUS_kirill_house_absolute_influence:0 "§GABSOLUTE CONTROL§!"
+  PB_RUS_kirill_house_normal_influence:0 "§YNormal Control§!"
+  PB_RUS_kirill_house_weak_influence:0 "§RWeak Control§!"
+  PB_RUS_kirill_house_collapsing_influence:0 "§RCOLLAPSING CONTROL§!"
+
+  PB_RUS_kirill_mob_incredibly_strong_influence:0 "§RINCREDIBLY STRONG INFLUENCE§!"
+  PB_RUS_kirill_mob_strong_influence:0 "§RStrong Influence§!"
+  PB_RUS_kirill_mob_normal_influence:0 "§LNormal Influence§!"
+  PB_RUS_kirill_mob_small_influence:0 "§LSmall Influence§!"
+  PB_RUS_kirill_mob_disbanded:0 "§GDISBANDED§!"
+
+  PB_RUS_kirill_intelligentsia_incredibly_strong_influence:0 "§RINCREDIBLY STRONG INFLUENCE§!"
+  PB_RUS_kirill_intelligentsia_strong_influence:0 "§RStrong Influence§!"
+  PB_RUS_kirill_intelligentsia_normal_influence:0 "§LNormal Influence§!"
+  PB_RUS_kirill_intelligentsia_small_influence:0 "§LSmall Influence§!"
+  PB_RUS_kirill_intelligentsia_disbanded:0 "§GDISBANDED§!"
+
+  PB_RUS_kirill_hidden_enemy_rival_power:0 "§RRIVIALING THE GOVERNMENT§!"
+  PB_RUS_kirill_hidden_enemy_large_power:0 "§RLarge Powerbase§!"
+  PB_RUS_kirill_hidden_enemy_middeling_power:0 "§RMiddeling Powerbase§!"
+  PB_RUS_kirill_hidden_enemy_insignificant_power:0 "§RLurking in the Shadows§!"
+  PB_RUS_kirill_hidden_enemy_eradicated:0 "§GERADICATED§!"
   
