a bit more stoof

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -82,6 +82,7 @@
   ## KIRILL IDEAS ##
   PB_RUS_kirill_the_fallen_prince_and_wife:0 "The Fallen Prince and Wife"
   PB_RUS_kirill_the_last_lovers:0 "The Last Lovers"
+  PB_RUS_kirill_kirills_tsardom_forevermore:0 "Kirill's Tsardom Forevermore"
 
   ##########################
   # EVENTS
@@ -489,9 +490,9 @@
   PB_RUS_kirill_exiling_alexei:0 "Exiling Alexei"
   PB_RUS_kirill_dealing_with_fanatical_lovers:0 "Dealing with the Fanatical Lovers"
   PB_RUS_kirill_fighting_the_parties:0 "Fighting the Parties"
-  PB_RUS_kirill_focus_the_mob:0 "Focus on the §RMob§!"
-  PB_RUS_kirill_focus_the_hidden_enemy:0 "Focus on the §OHidden Enemy§!"
-  PB_RUS_kirill_focus_the_intelligentsia:0 "Focus on the §BIntelligentsia§!"
+  PB_RUS_kirill_focus_the_mob:0 "Focus on the §R'Mob'§!"
+  PB_RUS_kirill_focus_the_hidden_enemy:0 "Focus on the §O'Hidden Enemy'§!"
+  PB_RUS_kirill_focus_the_intelligentsia:0 "Focus on the §B'Intelligentsia'§!"
   PB_RUS_kirill_finishing_them_off:0 "Finishing Them Off"
   PB_RUS_kirill_russia_shall_righteous_once_more:0 "Russia Shall be Righteous Once More"
   ########################## 
@@ -499,7 +500,16 @@
   ##########################
 
   PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
-  PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nInfluence of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC]\nInfluence of §YThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC]\nInfluence of §YThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC]\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC]"
+  PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC]\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC]\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC]\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC]"
+  PB_RUS_kirill_tsardoms_house:0 "The Tsardom's §GHouse§!"
+  PB_RUS_kirill_solidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
+  PB_RUS_kirill_contact_the_navy:0 "Contact the Navy"
+  PB_RUS_kirill_calm_the_purification:0 "Calm The Purification"
+  PB_RUS_kirill_finalise_the_house:0 "Finalise §GThe House§!"
+  PB_RUS_kirill_tsardoms_unruly_mob:0 "The Tsardom's §RMob§!"
+  PB_RUS_kirill_bring_the_mob_to_an_end:0 "Bring the §RMob§! to an End"
+  PB_RUS_kirill_tsardoms_opportunists_and_disloyal:0 "The Tsardom's §BOpportunists and Disloyal§!"
+  PB_RUS_kirill_tsardoms_most_secret_opposition:0 "The Tsardom's Most §OSecret Opposition§!"
   
 
   ########################## 
@@ -531,7 +541,58 @@
   RUS_intro_1_tt:0 "Black Hundreds divisions shall be brought up in the Baltic."
   RUS_intro_2_tt:0 "Baltic Freikorps shall be brought up in the Baltic."
   RUS_intro_3_tt:0 "Native Polish divisions shall be brought up."
+
+  #KIRILL
+  PB_RUS_kirill_house_influence_plus5_tt:0 "The §GHouses's Influence§! will §Ggrow§! by a small amount"
+  PB_RUS_kirill_house_influence_plus10_tt:0 "The §GHouses's Influence§! will §Ggrow§! by a medium amount"
+  PB_RUS_kirill_house_influence_plus15_tt:0 "The §GHouses's Influence§! will §Ggrow§! by a large amount"
+  PB_RUS_kirill_house_influence_plus20_tt:0 "The §GHouses's Influence§! will §Ggrow§! by a massive amount"
+  PB_RUS_kirill_house_influence_minus5_tt:0 "The §GHouses's Influence§! will §Rdecrease§! by a small amount"
+  PB_RUS_kirill_house_influence_minus10_tt:0 "The §GHouses's Influence§! will §Rdecrease§! by a medium amount"
+  PB_RUS_kirill_house_influence_minus15_tt:0 "The §GHouses's Influence§! will §Rdecrease§! by a large amount"
+  PB_RUS_kirill_house_influence_minus20_tt:0 "The §GHouses's Influence§! will §Rdecrease§! by a massive amount"
+
+  PB_RUS_kirill_mob_influence_plus5_tt:0 "The §RMobs's Influence§! will §Rgrow§! by a small amount"
+  PB_RUS_kirill_mob_influence_plus10_tt:0 "The §RMobs's Influence§! will §Rgrow§! by a medium amount"
+  PB_RUS_kirill_mob_influence_plus15_tt:0 "The §RMobs's Influence§! will §Rgrow§! by a large amount"
+  PB_RUS_kirill_mob_influence_plus20_tt:0 "The §RMobs's Influence§! will §Rgrow§! by a massive amount"
+  PB_RUS_kirill_mob_influence_minus5_tt:0 "The §RMobs's Influence§! will §Gdecrease§! by a small amount"
+  PB_RUS_kirill_mob_influence_minus10_tt:0 "The §RMobs's Influence§! will §Gdecrease§! by a medium amount"
+  PB_RUS_kirill_mob_influence_minus15_tt:0 "The §RMobs's Influence§! will §Gdecrease§! by a large amount"
+  PB_RUS_kirill_mob_influence_minus20_tt:0 "The §RMobs's Influence§! will §Gdecrease§! by a massive amount"
+
+  PB_RUS_kirill_intelligentsia_influence_plus5_tt:0 "The §RIntelligentsia's Influence§! will §Rgrow§! by a small amount"
+  PB_RUS_kirill_intelligentsia_influence_plus10_tt:0 "The §RIntelligentsia's Influence§! will §Rgrow§! by a medium amount"
+  PB_RUS_kirill_intelligentsia_influence_plus15_tt:0 "The §RIntelligentsia's Influence§! will §Rgrow§! by a large amount"
+  PB_RUS_kirill_intelligentsia_influence_plus20_tt:0 "The §RIntelligentsia's Influence§! will §Rgrow§! by a massive amount"
+  PB_RUS_kirill_intelligentsia_influence_minus5_tt:0 "The §RIntelligentsia's Influence§! will §Gdecrease§! by a small amount"
+  PB_RUS_kirill_intelligentsia_influence_minus10_tt:0 "The §RIntelligentsia's Influence§! will §Gdecrease§! by a medium amount"
+  PB_RUS_kirill_intelligentsia_influence_minus15_tt:0 "The §RIntelligentsia's Influence§! will §Gdecrease§! by a large amount"
+  PB_RUS_kirill_intelligentsia_influence_minus20_tt:0 "The §RIntelligentsia's Influence§! will §Gdecrease§! by a massive amount"
+
+  PB_RUS_kirill_intelligentsia_influence_plus5_tt:0 "The §BIntelligentsia's Influence§! will §Rgrow§! by a small amount"
+  PB_RUS_kirill_intelligentsia_influence_plus10_tt:0 "The §BIntelligentsia's Influence§! will §Rgrow§! by a medium amount"
+  PB_RUS_kirill_intelligentsia_influence_plus15_tt:0 "The §BIntelligentsia's Influence§! will §Rgrow§! by a large amount"
+  PB_RUS_kirill_intelligentsia_influence_plus20_tt:0 "The §BIntelligentsia's Influence§! will §Rgrow§! by a massive amount"
+  PB_RUS_kirill_intelligentsia_influence_minus5_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a small amount"
+  PB_RUS_kirill_intelligentsia_influence_minus10_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a medium amount"
+  PB_RUS_kirill_intelligentsia_influence_minus15_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a large amount"
+  PB_RUS_kirill_intelligentsia_influence_minus20_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a massive amount"
+
+  PB_RUS_kirill_hidden_enemy_influence_plus5_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a small amount"
+  PB_RUS_kirill_hidden_enemy_influenceplus10_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a medium amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus15_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a large amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus20_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a massive amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus5_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a small amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus10_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a medium amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus15_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a large amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus20_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a massive amount"
+
+  
   PB_RUS_kirill_shifting_politics:0 "The §YNew Russian Politics§! Decisions will be unlocked in order to deal with our new enemies\n\nThe Political landscape will §Rchange§! to better suit the new environment"
+  RUS_kirill_no_more_enemies:0 "All Internal Enemies of the §GTsardom§! have been §Rdestoryed§!"
+  PB_RUS_kirill_closer_to_unity_politcs:0 "We will be §YOne Step§! closer to §GPolitical Unity§!"
+  RUS_kirill_mob_variable_low:0 "The §RMob's influence§! is at a level it can be dispersed"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
@@ -560,17 +621,20 @@
   PB_RUS_kirill_mob_strong_influence:0 "§RStrong Influence§!"
   PB_RUS_kirill_mob_normal_influence:0 "§LNormal Influence§!"
   PB_RUS_kirill_mob_small_influence:0 "§LSmall Influence§!"
+  PB_RUS_kirill_mob_destoryable:0 "§GReady to be Dispersed§!"
   PB_RUS_kirill_mob_disbanded:0 "§GDISBANDED§!"
 
   PB_RUS_kirill_intelligentsia_incredibly_strong_influence:0 "§RINCREDIBLY STRONG INFLUENCE§!"
   PB_RUS_kirill_intelligentsia_strong_influence:0 "§RStrong Influence§!"
   PB_RUS_kirill_intelligentsia_normal_influence:0 "§LNormal Influence§!"
   PB_RUS_kirill_intelligentsia_small_influence:0 "§LSmall Influence§!"
+  PB_RUS_kirill_intelligentsia_destroyable:0 "§GReady to be Silenced§!"
   PB_RUS_kirill_intelligentsia_disbanded:0 "§GDISBANDED§!"
 
   PB_RUS_kirill_hidden_enemy_rival_power:0 "§RRIVIALING THE GOVERNMENT§!"
   PB_RUS_kirill_hidden_enemy_large_power:0 "§RLarge Powerbase§!"
   PB_RUS_kirill_hidden_enemy_middeling_power:0 "§RMiddeling Powerbase§!"
   PB_RUS_kirill_hidden_enemy_insignificant_power:0 "§RLurking in the Shadows§!"
+  PB_RUS_kirill_hidden_enemy_destroyable:0 "§GReady to be Eradicated§!"
   PB_RUS_kirill_hidden_enemy_eradicated:0 "§GERADICATED§!"
   
