--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -489,7 +489,7 @@
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
   PB_RUS_kirill_exiling_alexei:0 "Exiling Alexei"
   PB_RUS_kirill_dealing_with_fanatical_lovers:0 "Dealing with the Fanatical Lovers"
-  PB_RUS_kirill_fighting_the_parties:0 "Fighting the Parties"
+  PB_RUS_kirill_over_looking_russia:0 "Overlooking the New Russia"
   PB_RUS_kirill_focus_the_mob:0 "Focus on the §R'Mob'§!"
   PB_RUS_kirill_focus_the_hidden_enemy:0 "Focus on the §O'Hidden Enemy'§!"
   PB_RUS_kirill_focus_the_intelligentsia:0 "Focus on the §B'Intelligentsia'§!"
@@ -500,16 +500,28 @@
   ##########################
 
   PB_RUS_kirill_new_russian_politics:0 "New Russian Politics"
-  PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC]\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC]\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC]\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC]"
+  PB_RUS_kirill_new_russian_politics_desc:0 "\n\n\n\n\n\n\nSomething lol\nControl of §GThe 'House'§!: [PB_RUS_kirill_house_influence_LOC] ([?PB_RUS_kirill_house_influence])\nInfluence of §RThe 'Mob'§!: [PB_RUS_kirill_mob_influence_LOC] ([?PB_RUS_kirill_mob_influence])\nInfluence of §BThe 'Intelligentsia'§!: [PB_RUS_kirill_intelligentsia_influence_LOC] ([?PB_RUS_kirill_intelligentsia_influence])\nPower of the §O'Hidden Enemy'§!: [PB_RUS_kirill_hidden_enemy_LOC] ([?PB_RUS_kirill_hidden_enemy_influence])"
   PB_RUS_kirill_tsardoms_house:0 "The Tsardom's §GHouse§!"
   PB_RUS_kirill_solidify_the_houses_authority:0 "Solidify the §GHouses's§! Authority"
   PB_RUS_kirill_contact_the_navy:0 "Contact the Navy"
   PB_RUS_kirill_calm_the_purification:0 "Calm The Purification"
   PB_RUS_kirill_finalise_the_house:0 "Finalise §GThe House§!"
   PB_RUS_kirill_tsardoms_unruly_mob:0 "The Tsardom's §RMob§!"
+  PB_RUS_kirill_target_the_youth:0 "Target the Youth"
+  PB_RUS_kirill_target_the_top:0 "Target the Top"
+  PB_RUS_kirill_indoctrinate_the_missguided:0 "Indoctrinate the Missguided"
   PB_RUS_kirill_bring_the_mob_to_an_end:0 "Bring the §RMob§! to an End"
+  PB_RUS_kirill_close_the_taverns:0 "Close the Taverns"
+  PB_RUS_kirill_spread_disorder_amongst_them:0 "Spread Disorder Amongst Them"
+  PB_RUS_kirill_welcome_the_disloyal:0 "Welcome the Disloyal"
+  PB_RUS_kirill_disband_the_parties:0 "Disband the Disloyal Parties"
   PB_RUS_kirill_tsardoms_opportunists_and_disloyal:0 "The Tsardom's §BOpportunists and Disloyal§!"
   PB_RUS_kirill_tsardoms_most_secret_opposition:0 "The Tsardom's Most §OSecret Opposition§!"
+  PB_RUS_kirill_raid_their_compounds:0 "Raid Their Compounds"
+  PB_RUS_kirill_shut_down_their_loyalists:0 "Shut Down Their Allies"
+  PB_RUS_alienate_them:0 "Alienate Them"
+  PB_RUS_eradicate_the_traitors:0 "Eradicate The Traitors"
+
   
 
   ########################## 
@@ -579,20 +591,22 @@
   PB_RUS_kirill_intelligentsia_influence_minus15_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a large amount"
   PB_RUS_kirill_intelligentsia_influence_minus20_tt:0 "The §BIntelligentsia's Influence§! will §Gdecrease§! by a massive amount"
 
-  PB_RUS_kirill_hidden_enemy_influence_plus5_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a small amount"
-  PB_RUS_kirill_hidden_enemy_influenceplus10_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a medium amount"
-  PB_RUS_kirill_hidden_enemy_influence_plus15_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a large amount"
-  PB_RUS_kirill_hidden_enemy_influence_plus20_tt:0 "The §OHidden_enemy's Influence§! will §Rgrow§! by a massive amount"
-  PB_RUS_kirill_hidden_enemy_influence_minus5_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a small amount"
-  PB_RUS_kirill_hidden_enemy_influence_minus10_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a medium amount"
-  PB_RUS_kirill_hidden_enemy_influence_minus15_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a large amount"
-  PB_RUS_kirill_hidden_enemy_influence_minus20_tt:0 "The §OHidden_enemy's Influence§! will §Gdecrease§! by a massive amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus5_tt:0 "The §OHidden Enemy's Influence§! will §Rgrow§! by a small amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus10_tt:0 "The §OHidden Enemy's Influence§! will §Rgrow§! by a medium amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus15_tt:0 "The §OHiddeN Eenemy's Influence§! will §Rgrow§! by a large amount"
+  PB_RUS_kirill_hidden_enemy_influence_plus20_tt:0 "The §OHidden Enemy's Influence§! will §Rgrow§! by a massive amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus5_tt:0 "The §OHidden Enemy's Influence§! will §Gdecrease§! by a small amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus10_tt:0 "The §OHidden Enemy's Influence§! will §Gdecrease§! by a medium amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus15_tt:0 "The §OHidden Enemy's Influence§! will §Gdecrease§! by a large amount"
+  PB_RUS_kirill_hidden_enemy_influence_minus20_tt:0 "The §OHidden Enemy's Influence§! will §Gdecrease§! by a massive amount"
 
   
   PB_RUS_kirill_shifting_politics:0 "The §YNew Russian Politics§! Decisions will be unlocked in order to deal with our new enemies\n\nThe Political landscape will §Rchange§! to better suit the new environment"
   RUS_kirill_no_more_enemies:0 "All Internal Enemies of the §GTsardom§! have been §Rdestoryed§!"
   PB_RUS_kirill_closer_to_unity_politcs:0 "We will be §YOne Step§! closer to §GPolitical Unity§!"
   RUS_kirill_mob_variable_low:0 "The §RMob's influence§! is at a level it can be dispersed"
+  RUS_kirill_intelligentsia_variable_low:0 "The §BIntelligentsia's influence§! is at a level it can be disbanded"
+  RUS_kirill_hidden_enemy_variable_low:0 "The §OHidden Enemy's influence§! is at a level it can be disbanded"
   ##########################
   # Party Loyalty Mechanic n shit
   ##########################
