Lysenko Science is uber science!

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -53,6 +53,13 @@
   RUS_Georgy_Katzman_EM:0 "Georgy Katzman"
   RUS_Nikolai_Markov_IM:0 "Nikolai Markov"
   RUS_Lavr_Kornilov_SIM:0 "Lavr Kornilov"
+  #KIRILL
+  RUS_mikhail_rodzianko_HOG:0 "Mikhail Rodzianko"
+  RUS_sergei_witte_EM:0 "Sergei Witte"
+  RUS_alexander_guchkov_FM:0 "Alexander Guchkov"  
+  RUS_pyotr_stolypin_IM:0 "Pyotr Stolypin"
+  RUS_nicholas_nikolaevich_SIM:0 "Nicholas Nikolaevich"
+
 
   ##########################
   # IDEAS
@@ -88,6 +95,9 @@
   RUS_kirill_weak_political_control:0 "Weak Political Control"
   RUS_kirill_collapsing_political_control:0 "Collapsing Political Control"
   RUS_kirill_the_new_russian_will:0 "The New Russian Will"
+  RUS_kirill_lysenkos_industrialization:0 "Lysenko's Industrialization"
+  RUS_kirill_famine_prevention_agency:0 "Famine Prevention Agency"
+  RUS_kirill_the_new_russian_heart:0 "The New Russian Heart"
   ##########################
   # EVENTS
   ##########################
@@ -241,6 +251,12 @@
   RUS_kirill.4.t:0 "The New Political Paradigm"
   RUS_kirill.4.d:0 ""
   RUS_kirill.4.a:0 "The work is only just beginning"
+  RUS_kirill.5.t:0 "The Journey truly begins"
+  RUS_kirill.5.d:0 ""
+  RUS_kirill.5.a:0 "Long live the Motherland"
+  RUS_kirill.6.t:0 "In The Depths of Russia's Laboratories"
+  RUS_kirill.6.d:0 ""
+  RUS_kirill.6.a:0 "Our new Tesla"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -505,6 +521,44 @@
   PB_RUS_kirill_no_quarter_for_the_disloyal:0 "No Quarter for the Disloyal"
   PB_RUS_kirill_continue_the_agenda:0 "Continue the Agenda"
   PB_RUS_kirill_russia_shall_righteous_once_more:0 "Russia Shall be Righteous Once More"
+  PB_RUS_kirill_lysenkos_lab:0 "Lysenko's Lab"
+  PB_RUS_kirill_lysenkos_developmental_plans:0 "Lysenko's Developmental Plans"
+  PB_RUS_kirill_advancing_farming_production:0 "Advancing Farming Production"
+  PB_RUS_kirill_increasing_espionage_capabilites:0 "Increasing Espionage Capabilites"
+  PB_RUS_kirill_russians_shall_never_starve:0 "Russians Shall Never Starve"
+  PB_RUS_kirill_russian_industry_must_prosper:0 "Russian Industry Must Prosper"
+  PB_RUS_kirill_moscow_our_home:0 "Moscow: Our Home"
+  PB_RUS_kirill_muscovite_grit:0 "Muscovite Grit"
+  PB_RUS_kirill_petrograd_our_heart:0 "Petrograd: Our Heart"
+  PB_RUS_kirill_peters_eyes_to_the_sea:0 "Peter's Eyes to the Sea"
+  PB_RUS_kirill_kiev_our_breadbasket:0 "Kiev: Our Breadbasket"
+  PB_RUS_kirill_the_soul_of_the_rus:0 "The Soul of the Rus"
+  PB_RUS_kirill_the_heart_of_russia_bleeds_black:0 "The Heart of Russia Bleeds Black"
+  PB_RUS_kirill_we_will_make_them_talk:0 "We Will Make Them Talk"
+  PB_RUS_kirill_lysenko_in_court:0 "Lysenko in Court?"
+  PB_RUS_kirill_preposterous:0 "...Preposterous!"
+  PB_RUS_kirill_soldify_the_nobilitys_role_in_state:0 "Soldify the Nobility's Role in State"
+  PB_RUS_kirill_expand_nikolaevichs_role:0 "Expand Nikolaevich's Role"
+  PB_RUS_kirill_not_so_bad:0 "...Not so Bad"
+  PB_RUS_kirill_the_ministry_for_russian_science:0 "The Ministry for Russian Science"
+  PB_RUS_kirill_welcome_the_new_minister:0 "Welcome the New Minister"
+  PB_RUS_kirill_lysenko_promises_much:0 "Lysenko Promises Much"
+  PB_RUS_kirill_control_the_beasts:0 "Control the Beasts"
+  PB_RUS_kirill_the_dog_is_mans_best_friend:0 "The Dog is Man's Best Friend"
+  PB_RUS_kirill_armoring_our_hounds:0 "Armoring our Hounds"
+  PB_RUS_kirill_birds_as_scouts:0 "Birds as Scouts"
+  PB_RUS_kirill_bears_as_hammers:0 "Bears as Hammers"
+  PB_RUS_kirill_man_and_beast_are_one:0 "Man and Beast are One"
+  PB_RUS_kirill_making_a_better_russian_man:0 "Making A Better Russian Man"
+  PB_RUS_kirill_splicing_genes:0 "Splicing Genes"
+  PB_RUS_kirill_new_experiments:0 "New Experiments"
+  PB_RUS_kirill_human_test_subjects:0 "Human Test Subjects"
+  PB_RUS_kirill_making_them_stronger:0 "Making Them Stronger"
+  PB_RUS_kirill_making_them_faster:0 "Making Them Faster"
+  PB_RUS_kirill_making_them_greater:0 "Making Them Greater"
+  PB_RUS_kirill_weve_gone_far_enough:0 "We've Gone Far Enough"
+  PB_RUS_kirill_shall_we_go_even_farther:0 "Shall We Go Even Farther?"
+  PB_RUS_kirill_slav_kind_redefined:0 "Slav-Kind Redefined"
   ########################## 
   # Decisions
   ##########################
